tmp/atn1323.c.err
./adminaccess/codes/atn1323.c: In function ‘main’:
./adminaccess/codes/atn1323.c:14:5: error: expected declaration or statement at end of input
     }
     ^
